depends_compile_tests/tests/fail/derive/graph/edgeless.stderr
error: A Graphviz model must have at least 1 edge.
 --> tests/fail/derive/graph/edgeless.rs:6:10
  |
6 | #[derive(Graph)]
  |          ^^^^^
  |
  = note: this error originates in the derive macro `Graph` (in Nightly builds, run with -Z macro-backtrace for more info)
